// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleHeader Component Initial state Should render 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SimpleHeader
    goBack={false}
    title="Simple Header Title"
  >
    <ForwardRef(IonHeader)>
      <IonHeader
        forwardedRef={null}
      >
        <ion-header>
          <ForwardRef(IonToolbar)
            color="scotia-red"
          >
            <IonToolbar
              color="scotia-red"
              forwardedRef={null}
            >
              <ion-toolbar
                color="scotia-red"
              >
                <ForwardRef(IonGrid)>
                  <IonGrid
                    forwardedRef={null}
                  >
                    <ion-grid>
                      <ForwardRef(IonRow)
                        className="ion-justify-content-between"
                      >
                        <IonRow
                          className="ion-justify-content-between"
                          forwardedRef={null}
                        >
                          <ion-row>
                            <ForwardRef(IonLabel)>
                              <IonLabel
                                forwardedRef={null}
                              >
                                <ion-label>
                                  Simple Header Title
                                </ion-label>
                              </IonLabel>
                            </ForwardRef(IonLabel)>
                            <ForwardRef(IonButton)
                              className="logout-button"
                              color="light"
                              fill="outline"
                              onClick={[Function]}
                              shape="round"
                              size="small"
                            >
                              <IonButton
                                className="logout-button"
                                color="light"
                                fill="outline"
                                forwardedRef={null}
                                onClick={[Function]}
                                shape="round"
                                size="small"
                              >
                                <ion-button
                                  color="light"
                                  fill="outline"
                                  onClick={[Function]}
                                  shape="round"
                                  size="small"
                                >
                                  Logout
                                </ion-button>
                              </IonButton>
                            </ForwardRef(IonButton)>
                          </ion-row>
                        </IonRow>
                      </ForwardRef(IonRow)>
                    </ion-grid>
                  </IonGrid>
                </ForwardRef(IonGrid)>
              </ion-toolbar>
            </IonToolbar>
          </ForwardRef(IonToolbar)>
        </ion-header>
      </IonHeader>
    </ForwardRef(IonHeader)>
  </SimpleHeader>
</Provider>
`;

exports[`SimpleHeader Component Initial state Should render with back button 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <SimpleHeader
    goBack={true}
    title="Simple Header Title"
  >
    <ForwardRef(IonHeader)>
      <IonHeader
        forwardedRef={null}
      >
        <ion-header>
          <ForwardRef(IonToolbar)
            color="scotia-red"
          >
            <IonToolbar
              color="scotia-red"
              forwardedRef={null}
            >
              <ion-toolbar
                color="scotia-red"
              >
                <ForwardRef(IonGrid)>
                  <IonGrid
                    forwardedRef={null}
                  >
                    <ion-grid>
                      <ForwardRef(IonRow)
                        className="ion-justify-content-between"
                      >
                        <IonRow
                          className="ion-justify-content-between"
                          forwardedRef={null}
                        >
                          <ion-row>
                            <FontAwesomeIcon
                              border={false}
                              className="go-back-icon"
                              fixedWidth={false}
                              flip={null}
                              icon={
                                Object {
                                  "icon": Array [
                                    256,
                                    512,
                                    Array [],
                                    "f104",
                                    "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
                                  ],
                                  "iconName": "angle-left",
                                  "prefix": "fas",
                                }
                              }
                              inverse={false}
                              listItem={false}
                              mask={null}
                              onClick={[Function]}
                              pull={null}
                              pulse={false}
                              rotation={null}
                              size="lg"
                              spin={false}
                              swapOpacity={false}
                              symbol={false}
                              title=""
                              transform={null}
                            >
                              <svg
                                aria-hidden="true"
                                className="svg-inline--fa fa-angle-left fa-w-8 fa-lg go-back-icon"
                                data-icon="angle-left"
                                data-prefix="fas"
                                focusable="false"
                                onClick={[Function]}
                                role="img"
                                style={Object {}}
                                viewBox="0 0 256 512"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                  fill="currentColor"
                                  style={Object {}}
                                />
                              </svg>
                            </FontAwesomeIcon>
                            <ForwardRef(IonLabel)>
                              <IonLabel
                                forwardedRef={null}
                              >
                                <ion-label>
                                  Simple Header Title
                                </ion-label>
                              </IonLabel>
                            </ForwardRef(IonLabel)>
                            <ForwardRef(IonButton)
                              className="logout-button"
                              color="light"
                              fill="outline"
                              onClick={[Function]}
                              shape="round"
                              size="small"
                            >
                              <IonButton
                                className="logout-button"
                                color="light"
                                fill="outline"
                                forwardedRef={null}
                                onClick={[Function]}
                                shape="round"
                                size="small"
                              >
                                <ion-button
                                  color="light"
                                  fill="outline"
                                  onClick={[Function]}
                                  shape="round"
                                  size="small"
                                >
                                  Logout
                                </ion-button>
                              </IonButton>
                            </ForwardRef(IonButton)>
                          </ion-row>
                        </IonRow>
                      </ForwardRef(IonRow)>
                    </ion-grid>
                  </IonGrid>
                </ForwardRef(IonGrid)>
              </ion-toolbar>
            </IonToolbar>
          </ForwardRef(IonToolbar)>
        </ion-header>
      </IonHeader>
    </ForwardRef(IonHeader)>
  </SimpleHeader>
</Provider>
`;
